SERVER-22427 add logging for 'Operation timed out' errors